Use Coventry instead of CoventryCyrillic font

--- a/tex/title.tex
+++ b/tex/title.tex
@@ -78,7 +78,7 @@ Edited by Tigran Aivazian\\
 \begin{center}
 %{
 %\vspace*{\stretch{0.1}}
-%\fontspec[Mapping=tex-text]{CoventryCyrillic}\fontsize{24}{30}\selectfont
+%\fontspec[Mapping=tex-text]{Coventry}\fontsize{24}{30}\selectfont
 %%\fontspec[Mapping=tex-text]{URW Chancery L}\fontsize{14}{20}\selectfont
 %\setlength{\fboxsep}{10pt}
 %\doublebox{\parbox{10.8cm}{\centering To John F. Smith\\Put your gift message here.\\}}
