Explain why English was chosen for the Epochal Revelation.

--- a/tex/p082.tex
+++ b/tex/p082.tex
@@ -58,7 +58,7 @@
 \vs p082 6:2 Of the six coloured Sangik races, three were primary and three were secondary. Though the primary races --- blue, red, and yellow --- were in many respects superior to the three secondary peoples, it should be remembered that these secondary races had many desirable traits which would have considerably enhanced the primary peoples if their better strains could have been absorbed.
 \vs p082 6:3 Present\hyp{}day prejudice against “half\hyp{}castes,” “hybrids,” and “mongrels” arises because modern racial crossbreeding is, for the greater part, between the grossly inferior strains of the races concerned. You also get unsatisfactory offspring when the degenerate strains of the same race intermarry.
 \vs p082 6:4 If the present\hyp{}day races of Urantia could be freed from the curse of their lowest strata of deteriorated, antisocial, feeble\hyp{}minded, and outcast specimens, there would be little objection to a limited race amalgamation. And if such racial mixtures could take place between the highest types of the several races, still less objection could be offered.
-\vs p082 6:5 Hybridization of superior and dissimilar stocks is the secret of the creation of new and more vigorous strains. And this is true of plants, animals, and the human species. Hybridization augments vigour and increases fertility. Race mixtures of the average or superior strata of various peoples greatly increase \bibemph{creative} potential, as is shown in the present population of the United States of North America. When such matings take place between the lower or inferior strata, creativity is diminished, as is shown by the present\hyp{}day peoples of southern India.
+\vs p082 6:5 Hybridization of superior and dissimilar stocks is the secret of the creation of new and more vigorous strains. And this is true of plants, animals, and the human species. Hybridization augments vigour and increases fertility. Race mixtures of the average or superior strata of various peoples greatly increase \bibemph{creative} potential, as is shown in the present population of the United States of North America\fnst{\textbf{United States of North America}, This may explain why \bibemph{English} language was chosen to convey this great epochal revelation to all Urantia mortals.}. When such matings take place between the lower or inferior strata, creativity is diminished, as is shown by the present\hyp{}day peoples of southern India.
 \vs p082 6:6 Race blending greatly contributes to the sudden appearance of \bibemph{new} characteristics, and if such hybridization is the union of superior strains, then these new characteristics will also be \bibemph{superior} traits.
 \vs p082 6:7 As long as present\hyp{}day races are so overloaded with inferior and degenerate strains, race intermingling on a large scale would be most detrimental, but most of the objections to such experiments rest on social and cultural prejudices rather than on biological considerations. Even among inferior stocks, hybrids often are an improvement on their ancestors. Hybridization makes for species improvement because of the role of the \bibemph{dominant genes.} Racial intermixture increases the likelihood of a larger number of the desirable \bibemph{dominants} being present in the hybrid.
 \vs p082 6:8 \pc For the past 100 years more racial hybridization has been taking place on Urantia than has occurred in thousands of years. The danger of gross disharmonies as a result of crossbreeding of human stocks has been greatly exaggerated. The chief troubles of “half\hyp{}breeds” are due to social prejudices.
