Add a footnote about glasses of water in the ocean to 15:6.10

--- a/tex/p015.tex
+++ b/tex/p015.tex
@@ -88,7 +88,7 @@
 \vs p015 6:7 \pc With the exception of the architectural spheres, all space bodies have had an evolutionary origin, evolutionary in the sense that they have not been brought into being by fiat of Deity, evolutionary in the sense that the creative acts of God have unfolded by a time\hyp{}space technique through the operation of many of the created and eventuated intelligences of Deity.
 \vs p015 6:8 \pc \bibemph{The Suns.} These are the stars of space in all their various stages of existence. Some are solitary evolving space systems; others are double stars, contracting or disappearing planetary systems. The stars of space exist in no less than 1,000 different states and stages. You are familiar with suns that emit light accompanied by heat; but there are also suns which shine without heat.
 \vs p015 6:9 The trillions upon trillions of years that an ordinary sun will continue to give out heat and light well illustrates the vast store of energy which each unit of matter contains. The actual energy stored in these invisible particles of physical matter is well\hyp{}nigh unimaginable. And this energy becomes almost wholly available as light when subjected to the tremendous heat pressure and the associated energy activities which prevail in the interior of the blazing suns. Still other conditions enable these suns to transform and send forth much of the energy of space which comes their way in the established space circuits. Many phases of physical energy and all forms of matter are attracted to, and subsequently distributed by, the solar dynamos. In this way the suns serve as local accelerators of energy circulation, acting as automatic power\hyp{}control stations.
-\vs p015 6:10 The superuniverse of Orvonton is illuminated and warmed by more than ten trillion blazing suns. These suns are the stars of your observable astronomic system. More than two trillion are too distant and too small ever to be seen from Urantia. But in the master universe there are as many suns as there are glasses of water in the oceans of your world.
+\vs p015 6:10 The superuniverse of Orvonton is illuminated and warmed by more than ten trillion blazing suns. These suns are the stars of your observable astronomic system. More than two trillion are too distant and too small ever to be seen from Urantia. But in the master universe there are as many suns as there are glasses of water in the oceans of your world\fnst{\textbf{glasses of water in the oceans of your world}, Assuming the present value of the volume of the oceans (together with their seas) to be $1.5 \times 10^{18}\,m^3$ and a standard 250\,ml glass of water we obtain the required total number of stars: $6\times 10^{21}$.}.
 \vs p015 6:11 \pc \bibemph{The Dark Islands of Space.} These are the dead suns and other large aggregations of matter devoid of light and heat. The dark islands are sometimes enormous in mass and exert a powerful influence in universe equilibrium and energy manipulation. The density of some of these large masses is well\hyp{}nigh unbelievable. And this great concentration of mass enables these dark islands to function as powerful balance wheels, holding large neighbouring systems in effective leash. They hold the gravity balance of power in many constellations; many physical systems which would otherwise speedily dive to destruction in near\hyp{}by suns are held securely in the gravity grasp of these guardian dark islands. It is because of this function that we can locate them accurately. We have measured the gravity pull of the luminous bodies, and we can therefore calculate the exact size and location of the dark islands of space which so effectively function to hold a given system steady in its course.
 \vs p015 6:12 \pc \bibemph{Minor Space Bodies.} The meteors and other small particles of matter circulating and evolving in space constitute an enormous aggregate of energy and material substance.
 \vs p015 6:13 Many comets are unestablished wild offspring of the solar mother wheels, which are being gradually brought under control of the central governing sun. Comets also have numerous other origins. A comet’s tail points away from the attracting body or sun because of the electrical reaction of its highly expanded gases and because of the actual pressure of light and other energies emanating from the sun. This phenomenon constitutes one of the positive proofs of the reality of light and its associated energies; it demonstrates that light has weight. Light is a real substance, not simply waves of hypothetical ether.
